--- a/themes/landscape/source/css/_variables.styl
+++ b/themes/landscape/source/css/_variables.styl
@@ -19,13 +19,13 @@ color-pinterest = #cb2027
 color-google = #dd4b39
 
 // Fonts
-font-sans = STFangSong, Helvetica, Arial, Vernada, Tahoma, STXihei, "Microsoft YaHei", "Songti SC", SimSun, Heiti, sans-serif;
-font-serif = STFangSong, Helvetica, Arial, Vernada, Tahoma, STXihei, "Microsoft YaHei", "Songti SC", SimSun, Heiti, sans-serif;
-font-mono = STFangSong, Helvetica, Arial, Vernada, Tahoma, STXihei, "Microsoft YaHei", "Songti SC", SimSun, Heiti, sans-serif;
+font-sans = "Helvetica Neue", Helvetica, Arial, sans-serif
+font-serif = Georgia, "Times New Roman", serif
+font-mono = "Source Code Pro", Consolas, Monaco, Menlo, Consolas, monospace
 font-icon = FontAwesome
 font-icon-path = "fonts/fontawesome-webfont"
 font-icon-version = "4.0.3"
-font-size = 16px
+font-size = 14px
 line-height = 1.6em
 line-height-title = 1.1em
 
