--- a/themes/landscape/source/css/_partial/article.styl
+++ b/themes/landscape/source/css/_partial/article.styl
@@ -355,3 +355,12 @@ $article-gallery-ctrl
   &:before
     content: "\f054"
     right: 15px*/
+
+ p code,li code{
+    padding: 1px 3px;
+    margin: 0 3px;
+    background: #f1f1f1;
+    border: 1px solid #ccc;
+    font-family: font-mono;
+    word-wrap: break-word;//自动换行
+  }
